src/app/gw-app/wishes/wish-card/wish-card.component.scss
.wrapper {
  overflow: hidden;

  border-radius: 4px;
  padding: 8px;
}

.infos {
  overflow: hidden;
}

.list-index {
  width: 31.5px;
  text-align: center;
}

.stars {
  width: 60px;
  min-width: 60px;
  text-align: center;
}

.date {
  width: 70px;
  min-width: 70px;
  text-align: right;
}

h3,
p {
  margin: 0;
}

h3,
.date {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

